style: sidebar-wrap 포지션 속성 fixed로 변경

--- a/src/css/components/sidebar.css
+++ b/src/css/components/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar-wrap {
   display: none;
-  position: absolute;
+  position: fixed;
   inset: 0;
   background-color: var(--sidebar-wrap-gray);
   z-index: 9999;
